kubernetes/registry/helm/postgres-helm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  labels:
    name: postgres-ingress
spec:
  kubernetes.io/ingress.class: nginx
  rules:
    - host: postgres.70ld.home
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: postgres-postgresql
                port:
                  number: 5432
